---
source: integ-tests/tests/parser.rs
expression: spans
---
note[string]: root_answer1
   ┌─ strings:63:12
   │
63 │ answer1 = "\u000B"
   │            ^^^^^^

note[string]: root_answer10
   ┌─ strings:67:13
   │
67 │ answer10 = "\u03b4α"
   │             ^^^^^^^

note[string]: root_answer11
   ┌─ strings:68:13
   │
68 │ answer11 = "\U0000abc1"
   │             ^^^^^^^^^^

note[string]: root_answer4
   ┌─ strings:64:12
   │
64 │ answer4 = "\u03B4α"
   │            ^^^^^^^

note[string]: root_answer8
   ┌─ strings:65:12
   │
65 │ answer8 = "\U000003B4β"
   │            ^^^^^^^^^^^

note[string]: root_answer9
   ┌─ strings:66:12
   │
66 │ answer9 = "\uc0de"
   │            ^^^^^^

note[string]: root_backslash
   ┌─ strings:54:14
   │
54 │ backslash = "This string has a \\ backslash character."
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_backspace
   ┌─ strings:47:14
   │
47 │ backspace = "This string has a \b backspace character."
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_bar
  ┌─ strings:1:8
  │
1 │ bar = "\U00000000"
  │        ^^^^^^^^^^

note[string]: root_carriage
   ┌─ strings:51:13
   │
51 │ carriage = "This string has a \r carriage return character."
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_delete
   ┌─ strings:59:11
   │
59 │ delete = "This string has a \u007F delete control code."
   │           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_empty
  ┌─ strings:5:9
  │
5 │ empty = ""
  │         ^

note[string]: root_firstnl
   ┌─ strings:36:1
   │
36 │ This string has a ' quote character.'''
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_formfeed
   ┌─ strings:50:13
   │
50 │ formfeed = "This string has a \f form feed character."
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_key1
  ┌─ strings:3:9
  │
3 │ key1 = "One\nTwo"
  │         ^^^^^^^^

note[string]: root_key2
  ┌─ strings:4:11
  │
4 │ key2 = """One\nTwo"""
  │           ^^^^^^^^

note[string]: root_key3
  ┌─ strings:7:1
  │  
7 │ ╭ One
8 │ │ Two"""
  │ ╰───^

note[string]: root_key4
   ┌─ strings:10:9
   │
10 │ key4 = "The quick brown fox jumps over the lazy dog."
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_key5
   ┌─ strings:12:1
   │  
12 │ ╭ The quick brown \
13 │ │ 
14 │ │ 
15 │ │ fox jumps over \
16 │ │ the lazy dog."""
   │ ╰─────────────^

note[string]: root_key6
   ┌─ strings:17:11
   │  
17 │   key6 = """\
   │ ╭───────────^
18 │ │    The quick brown \
19 │ │    fox jumps over \
20 │ │    the lazy dog.\
21 │ │    """
   │ ╰───^

note[string]: root_lbackslash
   ┌─ strings:44:15
   │
44 │ lbackslash = 'This string has a \\ backslash character.'
   │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lbackspace
   ┌─ strings:38:15
   │
38 │ lbackspace = 'This string has a \b backspace character.'
   │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lcarriage
   ┌─ strings:42:14
   │
42 │ lcarriage = 'This string has a \r carriage return character.'
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lformfeed
   ┌─ strings:41:14
   │
41 │ lformfeed = 'This string has a \f form feed character.'
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lines
   ┌─ strings:30:1
   │  
30 │ ╭ The first newline is
31 │ │ trimmed in raw strings.
32 │ │ All other whitespace
33 │ │ is preserved.
34 │ │ '''
   │ ╰^

note[string]: root_lnewline
   ┌─ strings:40:13
   │
40 │ lnewline = 'This string has a \n new line character.'
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lslash
   ┌─ strings:43:11
   │
43 │ lslash = 'This string has a \/ slash character.'
   │           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_ltab
   ┌─ strings:39:9
   │
39 │ ltab = 'This string has a \t tab character.'
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_newline
   ┌─ strings:49:12
   │
49 │ newline = "This string has a \n new line character."
   │            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_notunicode1
   ┌─ strings:55:16
   │
55 │ notunicode1 = "This string does not have a unicode \\u escape."
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_notunicode2
   ┌─ strings:56:16
   │
56 │ notunicode2 = "This string does not have a unicode \u005Cu escape."
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_notunicode3
   ┌─ strings:57:16
   │
57 │ notunicode3 = "This string does not have a unicode \\u0075 escape."
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_notunicode4
   ┌─ strings:58:16
   │
58 │ notunicode4 = "This string does not have a unicode \\\u0075 escape."
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_quote
   ┌─ strings:52:10
   │
52 │ quote = "This string has a \" quote character."
   │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_quoted
   ┌─ strings:25:11
   │
25 │ quoted = 'Tom "Dubs" Preston-Werner'
   │           ^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_regex
   ┌─ strings:26:10
   │
26 │ regex = '<\i\c*\s*>'
   │          ^^^^^^^^^^

note[string]: root_regex2
   ┌─ strings:28:13
   │
28 │ regex2 = '''I [dw]on't need \d{2} apples'''
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_slash
   ┌─ strings:53:10
   │
53 │ slash = "This string has a / slash character."
   │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_tab
   ┌─ strings:48:8
   │
48 │ tab = "This string has a \t tab character."
   │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_unicode
  ┌─ strings:2:12
  │
2 │ unicode = "δ"
  │            ^

note[string]: root_unitseparator
   ┌─ strings:60:18
   │
60 │ unitseparator = "This string has a \u001F unit separator control code."
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_winpath
   ┌─ strings:23:12
   │
23 │ winpath = 'C:\Users\nodejs\templates'
   │            ^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_winpath2
   ┌─ strings:24:13
   │
24 │ winpath2 = '\\ServerX\admin$\system32\'
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^

note[table]: root
   ┌─ strings:1:1
   │  
 1 │ ╭ bar = "\U00000000"
 2 │ │ unicode = "δ"
 3 │ │ key1 = "One\nTwo"
 4 │ │ key2 = """One\nTwo"""
   · │
68 │ │ answer11 = "\U0000abc1"
69 │ │ 
   │ ╰^


